--- a/src/app/features/profile/social-links/social-links.component.html
+++ b/src/app/features/profile/social-links/social-links.component.html
@@ -156,7 +156,7 @@
               <div class="flex-shrink-0 h-10 w-10 rounded-full flex items-center justify-center" [ngClass]="getPlatformColor(link.platform)">
                 <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                   <!-- Generic svg path as placeholder -->
-                  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z" />
+                  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-10S17.52 2 12 2z" />
                 </svg>
               </div>
               <div class="ml-4">
@@ -262,7 +262,7 @@
             <span class="flex items-center justify-center h-4 w-4 rounded-full mr-2" [ngClass]="platform.color">
               <svg class="h-2 w-2 text-white" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                 <!-- Generic svg path as placeholder -->
-                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z" />
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-10S17.52 2 12 2z" />
               </svg>
             </span>
             {{ platform.label }}
